swagger duz
